# classes/ILIAS/Config/Documentation/structure/openapi.json
@@ -1028,6 +1028,57 @@
             }
         },
         "/ilias/course/{ref_id}/users/{user_identifier}": {
+            "put": {
+                "tags": [
+                    "Course"
+                ],
+                "summary": "Adds a user to a course as member by user_id or username.",
+                "description": "Adds a user to a course as member by user_id or username.",
+                "operationId": "addMember",
+                "parameters": [
+                    {
+                        "name": "ref_id",
+                        "in": "path",
+                        "description": "Ref_id of the course",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "user_identifier",
+                        "in": "path",
+                        "description": "ID or username of the user",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success add user to course"
+                    },
+                    "404": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "examples": {
+                                    "COURSE_NOT_FOUND": {
+                                        "summary": "COURSE_NOT_FOUND",
+                                        "description": "Course not found"
+                                    },
+                                    "USER_NOT_FOUND": {
+                                        "summary": "USER_NOT_FOUND",
+                                        "description": "User not found"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "Course"
@@ -1154,59 +1205,6 @@
                 "responses": {
                     "200": {
                         "description": "Erfolgreiche Antwort"
-                    }
-                }
-            }
-        },
-        "/ilias/course/{ref_id}/users/{user_id}": {
-            "put": {
-                "tags": [
-                    "Course"
-                ],
-                "summary": "Add a user to a course as member",
-                "description": "Adds a user to a course as member",
-                "operationId": "addMember",
-                "parameters": [
-                    {
-                        "name": "ref_id",
-                        "in": "path",
-                        "description": "Ref_id of the course",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "user_id",
-                        "in": "path",
-                        "description": "Id of the user",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success add user to course"
-                    },
-                    "404": {
-                        "description": "Error",
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "examples": {
-                                    "COURSE_NOT_FOUND": {
-                                        "summary": "COURSE_NOT_FOUND",
-                                        "description": "Course not found"
-                                    },
-                                    "USER_NOT_FOUND": {
-                                        "summary": "USER_NOT_FOUND",
-                                        "description": "User not found"
-                                    }
-                                }
-                            }
-                        }
                     }
                 }
             }
